# Bootcamp_python

./: README.md
01-Aula-01/: exemplo_00.py  exemplo_01.py  kpi.py  readme.md
02-Aula-02/: ex01.py  ex02.py  ex03.py  kpi_v2.py  readme.md
03-Aula-03/: desafio.py  ex01.py  ex02.py  ex03.py  main.py  readme.md
04-Aula-04/: arquivos.py  ex01.py  exemplo.csv  exemplo_doc.py  exemplo_lista.py  readme.md
07-Aula-07/: etl.py  main.py  readme.md  vendas.csv
08-Aula-08/: etl.py  pipeline.py
10-Aula-10/: desafio.db  desafio.py  exemplo.py  meubanco.db  pyproject.toml
11-Aula-11/: exemplo.py  pyproject.toml  readme.md
11-Aula-11/src/: controller.py  main.py  pokemon.db
12-Aula-12/: database.py  main.py  models.py  pyproject.toml  readme.md  test.db
13-Aula-13/: pyproject.toml
13-Aula-13/backend/: database.py  models.py  readme.md  schemas.py
