[tool.poetry]
name = "sqlachemyexemplo"
version = "0.1.0"
description = ""
authors = ["Felipe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
sqlalchemy = "^2.0.28"
requests = "^2.32.3"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"